# ApexPDF-SDK

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  README.md  THIRD_PARTY_NOTICES.txt
.github/workflows/: ci.yml
cmake/: apexpdf-sdk.spdx.json.in
docs/: apexpdf-sdk-gap-analysis.md  apexpdf-sdk-slice-0-plan.md  apexpdf-sdk-slice-1-plan.md  apexpdf-sdk-slice-2-plan.md
docs/api/: abi-1.2-parser-proposal.md  c-abi.md
docs/dependencies/: approved-dependencies.md
docs/governance/: contributing.md
docs/integration/: editor-gate-0-handoff.md  editor-gate-0-result.md  editor-shadow-validation-handoff-draft.md
docs/release/: release-checklist.md  slice-0-exit-audit.md
docs/security/: parser-resource-limits.md  security-policy.md
docs/standards/: standards-register.md
eng/: New-EditorGate0Bundle.ps1
include/apexpdf/: apexpdf.h  apexpdf_types.h  apexpdf_version.h
src/abi/: apexpdf.cpp
src/dotnet/ApexPdf.Sdk/: ApexPdf.Sdk.csproj  ApexPdfCapabilities.cs  ApexPdfException.cs  ApexPdfLibrary.cs  ApexPdfVersion.cs  LICENSE.txt  NativeMethods.cs  README.md  SafeApexPdfLibraryHandle.cs
tests/: Test-PackageConsumer.ps1  abi_tests.c  audit_exports.cmake  cpp_header_tests.cpp  lifecycle_stress_tests.c
tests/dotnet/ApexPdf.Sdk.ManagedTests/: ApexPdf.Sdk.ManagedTests.csproj  Program.cs
tests/fuzz/: stream_fuzz_replay.c
tests/fuzz/corpus/stream/: binary.seed
tests/package_consumer/: CMakeLists.txt  consumer.c  consumer.cpp
